FreeST/test/Programs/InvalidTests/Modules/LongCycle/LongCycle.fst
module LongCycle where

import ModuleA


main : Int
main = f 23 + g 12 

h : Int -> Int
h x = x
